# pygeoapi-precommit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  makefile  pyproject.toml
hooks/: pygeoapi_resources_have_links.py  pygeoapi_resources_have_links_test.py
hooks/testdata/: asu-config.yml  invalid-wwdh-config.yml
