[project]
name = "pygeoapi-precommit-hooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
pygeoapi_resources_have_links = "hooks.pygeoapi_resources_have_links:main"